# deriv

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  DelayedMessageHandler.cpp  DelayedMessageHandler.h  IHandler.h  README.md  WsClient.cpp  WsClient.h  build.sh  main.cpp
cmake_modules/: external_webscoketpp.cmake
docker/: compiler_entrypoint.sh  deriv-base-dockerfile  deriv-compiler-dockerfile
